// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    <span>
      4
    </span>
     
    expenses
     totalling 
    <span>
      1234
    </span>
  </h1>
  <Link
    className="button"
    replace={false}
    to="/create"
  >
    Add Expense
  </Link>
</div>
`;

exports[`should correctly render Summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    <span>
      1
    </span>
     
    expense
     totalling 
    <span>
      100
    </span>
  </h1>
  <Link
    className="button"
    replace={false}
    to="/create"
  >
    Add Expense
  </Link>
</div>
`;
